force-app/main/default/objects/Budget_Income__c.object
<CustomObject>
    <fields>
        <fullName>Assumptions__c</fullName>
        <label>Assumptions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Average_Fee_per_Student__c</fullName>
        <formula>School_Budget__r.Tuition_Revenues__c / School_Budget__r.Number_of_Students__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Average Fee per Student</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Children_Using_Service__c</fullName>
        <label>% Children Using Service</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Fee_Amount__c</fullName>
        <label>Fee Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Fee_del__c</fullName>
        <label>Fee</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pre-Nursery 1 Tuition</fullName>
                </value>
                <value>
                    <fullName>Pre-Nursery Tuition</fullName>
                </value>
                <value>
                    <fullName>Nursery Tuition</fullName>
                </value>
                <value>
                    <fullName>Reception Tuition</fullName>
                </value>
                <value>
                    <fullName>Year 1 Tuition</fullName>
                </value>
                <value>
                    <fullName>Year 2 Tuition</fullName>
                </value>
                <value>
                    <fullName>Year 3 Tuition</fullName>
                </value>
                <value>
                    <fullName>Year 4 Tuition</fullName>
                </value>
                <value>
                    <fullName>Year 5 Tuition</fullName>
                </value>
                <value>
                    <fullName>Year 6 Tuition</fullName>
                </value>
                <value>
                    <fullName>Year 7 Tuition</fullName>
                </value>
                <value>
                    <fullName>Year 8 Tuition</fullName>
                </value>
                <value>
                    <fullName>Year 9 Tuition</fullName>
                </value>
                <value>
                    <fullName>Year 10 Tuition</fullName>
                </value>
                <value>
                    <fullName>Year 11 Tuition</fullName>
                </value>
                <value>
                    <fullName>Year 12 Tuition</fullName>
                </value>
                <value>
                    <fullName>Year 13 Tuition</fullName>
                </value>
                <value>
                    <fullName>Capital Contribution/Deposit</fullName>
                </value>
                <value>
                    <fullName>Lunch Fees</fullName>
                </value>
                <value>
                    <fullName>Bus Fees</fullName>
                </value>
                <value>
                    <fullName>Uniform Fees</fullName>
                </value>
                <value>
                    <fullName>Application Fees</fullName>
                </value>
                <value>
                    <fullName>EAL Fees</fullName>
                </value>
                <value>
                    <fullName>Extra-Programmes</fullName>
                </value>
                <value>
                    <fullName>Other Fees</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Locked__c</fullName>
        <formula>TEXT(School_Budget__r.Locked__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Locked</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Monthly_Fee__c</fullName>
        <label>Monthly Fee</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Months_in_a_Year__c</fullName>
        <label>Months in a Year</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Number_of_Paybacks__c</fullName>
        <label>Number of Paybacks</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pay_Monthly__c</fullName>
        <label>% Pay Monthly</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Pay_Termly__c</fullName>
        <label>% Pay Termly</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Pay_Yearly__c</fullName>
        <label>% Pay Yearly</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>School_Budget__c</fullName>
        <label>School Budget</label>
        <referenceTo>School_Budget__c</referenceTo>
        <relationshipLabel>Budget - Income</relationshipLabel>
        <relationshipName>Budget_Income</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Students_Using_Service__c</fullName>
        <formula>Children_Using_Service__c * School_Budget__r.Number_of_Students__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Students Using Service</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Termly_Fee__c</fullName>
        <label>Termly Fee</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Bursaries__c</fullName>
        <label>Total Bursaries</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Income_Text__c</fullName>
        <label>Total Income (Text)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Income__c</fullName>
        <formula>(((Quantity__c* Pay_Yearly__c )*   Yearly_Fee__c )+((Quantity__c*Pay_Termly__c)*   (Termly_Fee__c*3) )+((Quantity__c*Pay_Monthly__c)*   (Monthly_Fee__c* IF(TEXT(Months_in_a_Year__c)=&quot;10&quot;,10,12)) ) )+ (Students_Using_Service__c *Fee_Amount__c   )+( of_Revenue__c *(-School_Budget__r.Gross_Income__c ))+( Number_of_Paybacks__c *(- Fee_Amount__c ))+( Average_Fee_per_Student__c * -Total_Bursaries__c )+(Quantity__c* Fee_Amount__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Income</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Yearly_Fee__c</fullName>
        <label>Yearly Fee</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>of_Revenue__c</fullName>
        <label>% of Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <label>Budget - Income</label>
    <nameField>
        <displayFormat>I-{0000}</displayFormat>
        <label>Entry #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Budget - Income</pluralLabel>
    <recordTypes>
        <fullName>Additional_Programmes</fullName>
        <active>true</active>
        <label>1007-Additional Programmes</label>
    </recordTypes>
    <recordTypes>
        <fullName>Application_Fees</fullName>
        <active>true</active>
        <label>1005-Application Fees</label>
    </recordTypes>
    <recordTypes>
        <fullName>Bursaries</fullName>
        <active>true</active>
        <label>1010-Bursaries</label>
    </recordTypes>
    <recordTypes>
        <fullName>Bus_Service</fullName>
        <active>true</active>
        <label>1002-Bus Service</label>
    </recordTypes>
    <recordTypes>
        <fullName>Capital_Contributions_Deposits</fullName>
        <active>true</active>
        <label>1004-Capital Contributions/Deposits</label>
    </recordTypes>
    <recordTypes>
        <fullName>EAL_Fees</fullName>
        <active>true</active>
        <label>1006-EAL Fees</label>
    </recordTypes>
    <recordTypes>
        <fullName>Early_Notice_Paybacks</fullName>
        <active>true</active>
        <label>1009-Early Notice Paybacks</label>
    </recordTypes>
    <recordTypes>
        <fullName>Lunch_Fees</fullName>
        <active>true</active>
        <label>1001-Lunch Fees</label>
    </recordTypes>
    <recordTypes>
        <fullName>Other_Fees</fullName>
        <active>true</active>
        <label>1007-Other Fees</label>
    </recordTypes>
    <recordTypes>
        <fullName>Revenue_Tax</fullName>
        <active>true</active>
        <label>1008-Revenue Tax</label>
    </recordTypes>
    <recordTypes>
        <fullName>Tuition_Fees</fullName>
        <active>true</active>
        <label>1000-Tuition Fees</label>
    </recordTypes>
    <recordTypes>
        <fullName>Uniform_Fees</fullName>
        <active>true</active>
        <label>1003-Uniform Fees</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Checks_Payments</fullName>
        <active>true</active>
        <errorConditionFormula>AND((Pay_Monthly__c +Pay_Termly__c+Pay_Yearly__c )&gt; 0,


(Pay_Monthly__c +Pay_Termly__c+Pay_Yearly__c) &lt;&gt; 1)</errorConditionFormula>
        <errorMessage>% Payers must equal 100%</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Locked</fullName>
        <active>true</active>
        <description>Prevents New or Edits if the budget is Locked</description>
        <errorConditionFormula>Locked__c=&quot;Yes&quot;</errorConditionFormula>
        <errorMessage>This School Budget is Locked. Please contact the Group Administrator for Details</errorMessage>
    </validationRules>
</CustomObject>